# polygence-work

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
configs/docker/: docker-compose.yaml
polygence/: asgi.py  settings.py  urls.py  wsgi.py
spendings/: models.py  serializers.py  test_models.py  test_serializers.py  tests.py  urls.py  views.py
spendings/migrations/: 0001_initial.py
